--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-hook-form": "^7.60.0",
     "react-is": "^19.1.1",
     "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^7.8.2",
     "recharts": "latest",
     "sonner": "latest",
     "tailwind-merge": "^2.5.5",
