--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "geist": "latest",
+    "html2pdf.js": "^0.12.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^15.5.1",
@@ -72,11 +73,14 @@
     "zod": "3.25.67"
   },
   "devDependencies": {
+    "@csstools/postcss-oklab-function": "^4.0.12",
     "@tailwindcss/postcss": "^4.1.9",
+    "@types/html2pdf.js": "^0.10.0",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
+    "postcss-color-functional-notation": "^7.0.12",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
